# snowflake_airline_task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
core/airflow/dags/: cleanup_airline_dag.py  init_airline_dag.py  process_airline_dag.py
core/airflow/dags/sql/: manual_timetravel_test.sql
core/airflow/dags/sql/init/:  06_setup_security_rls.sql  01_initialize_db_infrastructure.sql  02_create_dwh_tables_ddl.sql  03_create_sp_ingest_raw_flights.sql  04_create_sp_process_normalized_flights.sql  05_create_sp_build_flight_stats_report.sql
core/airflow/dags/utils/: consts.py  snowflake_config.py
docker_compose/: app.yml
