[tool.poetry]
name = "snowflake-airline-task"
version = "0.1.0"
description = "Common Task to learn basic of Snowflake"
authors = ["Stanislau Panfilenka <stanislav.panfilenko@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "snowflake_airline_task"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
pre-commit = "^4.5.0"
apache-airflow = "^3.1.3"
pytest = "^9.0.1"
apache-airflow-providers-snowflake = "^6.8.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
exclude = ".venv,build,dist"
ignore = "E203, W503"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true